Connected contactform to firestore

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
+    "firebase": "^8.1.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
