--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,11 @@
 /.pnp
 .pnp.js
 .firebase
+.env
 
-# testing
 /coverage
 
-# production
 /build
-
-# misc
 .DS_Store
 .env.local
 .env.development.local
